force-app/main/default/objects/Purchase_Invoice__c/Purchase_Invoice__c.object-meta.xml
<CustomObject>
    <label>Purchase Invoice</label>
    <nameField>
        <displayFormat>PINV{00000}</displayFormat>
        <label>Purchase Invoice Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>