force-app/main/default/objects/Purchase_Invoice__c/fields/Total_Amount_to_Pay__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_to_Pay__c</fullName>
    <label>Total Amount to Pay</label>
    <summarizedField>Purchase_Invoice_Item__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Purchase_Invoice_Item__c.Purchase_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>