force-app/main/default/objects/Purchase_Invoice__c/fields/Total_Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_Sold__c</fullName>
    <label>Total Quantity Sold</label>
    <summarizedField>Purchase_Invoice_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Purchase_Invoice_Item__c.Purchase_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>